[gd_scene load_steps=10 format=3 uid="uid://r1ntcqdujfol"]

[ext_resource type="Script" path="res://sample/diisis_intro/stages/game_stage.gd" id="1_a36me"]
[ext_resource type="Script" path="res://addons/diisis/parser/src/line_reader.gd" id="1_h4afo"]
[ext_resource type="FontFile" uid="uid://dy8rsqmwhxjp6" path="res://addons/diisis/editor/visuals/fonts/TT Chocolates Trial Bold.otf" id="2_6jeks"]
[ext_resource type="Script" path="res://sample/diisis_intro/stages/instruction_handler_intro.gd" id="4_u8vmc"]
[ext_resource type="PackedScene" uid="uid://chfbyvpvah4eu" path="res://sample/diisis_intro/characters/intro_character.tscn" id="5_abdaq"]
[ext_resource type="Texture2D" uid="uid://vvvuc4ewukes" path="res://icon.svg" id="5_pecrs"]
[ext_resource type="Script" path="res://sample/inline_eval.gd" id="6_8ao3j"]
[ext_resource type="PackedScene" uid="uid://qkegdwc8ux5o" path="res://sample/diisis_intro/stages/black_fade.tscn" id="8_50byo"]
[ext_resource type="Script" path="res://sample/diisis_intro/stages/game_camera.gd" id="9_lbjue"]

[node name="GameStage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a36me")

[node name="Characters" type="Node2D" parent="."]

[node name="Eterna" parent="Characters" instance=ExtResource("5_abdaq")]
position = Vector2(1112, 549)
character_name = "eterna"

[node name="Amber" parent="Characters" instance=ExtResource("5_abdaq")]
position = Vector2(253, 557)
character_name = "amber"

[node name="CGBottomContainer" type="Control" parent="."]
auto_translate_mode = 1
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="CGBottomContainer"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="CGTex" type="TextureRect" parent="CGBottomContainer"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VNUI" type="Control" parent="."]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextContainer" type="CenterContainer" parent="VNUI"]
auto_translate_mode = 1
custom_minimum_size = Vector2(454, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -227.0
offset_right = 250.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="VNUI/TextContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VNUI/TextContainer/MarginContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 8

[node name="MarginContainer" type="MarginContainer" parent="VNUI/TextContainer/MarginContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="Label" type="Label" parent="VNUI/TextContainer/MarginContainer/VBoxContainer/MarginContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "Name Label Here"

[node name="Panel" type="PanelContainer" parent="VNUI/TextContainer/MarginContainer/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 8

[node name="RichTextLabel" type="RichTextLabel" parent="VNUI/TextContainer/MarginContainer/VBoxContainer/Panel"]
auto_translate_mode = 1
custom_minimum_size = Vector2(500, 200)
layout_mode = 2
theme_override_fonts/bold_font = ExtResource("2_6jeks")
text = "Text Body Here
dghfgh"
fit_content = true
scroll_active = false

[node name="ChoiceContainer" type="PanelContainer" parent="VNUI"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VNUI/ChoiceContainer"]
auto_translate_mode = 1
layout_mode = 2
size_flags_vertical = 4

[node name="ControlsContainer" type="VBoxContainer" parent="VNUI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -64.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="HistoryButton" type="Button" parent="VNUI/ControlsContainer"]
layout_mode = 2
text = "History"

[node name="Handler" type="Node" parent="."]
script = ExtResource("4_u8vmc")

[node name="LineReader" type="Control" parent="." node_paths=PackedStringArray("choice_container", "choice_option_container", "instruction_handler", "text_content", "text_container", "name_label", "name_container", "inline_evaluator")]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
script = ExtResource("1_h4afo")
choice_container = NodePath("../VNUI/ChoiceContainer")
choice_option_container = NodePath("../VNUI/ChoiceContainer/VBoxContainer")
instruction_handler = NodePath("../Handler")
text_content = NodePath("../VNUI/TextContainer/MarginContainer/VBoxContainer/Panel/RichTextLabel")
text_container = NodePath("../VNUI/TextContainer")
name_label = NodePath("../VNUI/TextContainer/MarginContainer/VBoxContainer/MarginContainer/Label")
name_container = NodePath("../VNUI/TextContainer/MarginContainer/VBoxContainer/MarginContainer")
inline_evaluator = NodePath("../InlineEval")

[node name="Icon" type="Sprite2D" parent="."]
visible = false
position = Vector2(566, 297)
texture = ExtResource("5_pecrs")

[node name="InlineEval" type="Node" parent="."]
script = ExtResource("6_8ao3j")

[node name="BlackFade" parent="." instance=ExtResource("8_50byo")]
visible = false
layout_mode = 1

[node name="CGTopContainer" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="CGTopContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="CGTex" type="TextureRect" parent="CGTopContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(720, 450)
script = ExtResource("9_lbjue")

[connection signal="ready" from="Characters/Eterna" to="." method="remove_blocker"]
[connection signal="ready" from="Characters/Amber" to="." method="remove_blocker"]
[connection signal="pressed" from="VNUI/ControlsContainer/HistoryButton" to="." method="_on_history_button_pressed"]
[connection signal="hide_cg" from="Handler" to="." method="hide_cg"]
[connection signal="show_cg" from="Handler" to="." method="_on_handler_show_cg"]
[connection signal="start_black_fade" from="Handler" to="BlackFade" method="_on_handler_start_black_fade"]
